single/frontend-ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: 2mc-frontend
  annotations:
spec:
  rules:
    - host: app.rancher
      http:
        paths:
          - backend:
              serviceName: mc-frontend
              servicePort: 8000
